--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale="> -->
   <meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-  <title>Khushboo Goel's Project</title>
+  <title>Nirmani Warakaulla's Project</title>
   <link rel="stylesheet" href="./projects.css">
  <!-- Bootstrap Files -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
@@ -53,7 +53,7 @@
    <div class="pro">
   <div class="card-deck">
   <div class="card shadow p-3 mb-5 bg-white rounded">
-    <img class="card-img-top" src="https://raw.githubusercontent.com/KhushbooGoel01/KhushbooGoel01.github.io/master/Screenshot%202020-11-03%20123124.png" alt="Card image cap">
+    <img class="card-img-top" src="https://github.com/NirmaniWarakaulla/NirmaniWarakaulla.github.io/blob/main/Screenshot%201.png" alt="Card image cap">
 <!--     <img class="card-img-top" src="https://raw.githubusercontent.com/KhushbooGoel01/KhushbooGoel01.github.io/master/Screenshot%202020-11-03%20123625.png" alt="Card image cap"> -->
     <div class="card-body">
       <h5 class="card-title">Portfolio Website</h5>
