--- a/projects.html
+++ b/projects.html
@@ -58,7 +58,7 @@
     <div class="card-body">
       <h5 class="card-title">Portfolio Website</h5>
       <p class="card-text">A website made with HTML, CSS, JS & Bootstrap to showcase my works.</p>
-      <a href="https://github.com/KhushbooGoel01/KhushbooGoel01.github.io" color = #fff class="btn btn-primary stretched-link">Learn More</a>
+      <a href="https://github.com/NirmaniWarakaulla/NirmaniWarakaulla.github.io" color = #fff class="btn btn-primary stretched-link">Learn More</a>
       <p class="card-text"></p>
     </div>
   </div>
@@ -77,7 +77,7 @@
 <!--       <div class="shadow p-3 mb-5 bg-white rounded">Regular shadow</div> -->
       <h5 class="card-title">ChessMov</h5>
       <p class="card-text">A chess game png file parser using python.</p>
-      <a href="https://github.com/KhushbooGoel01/" color = #fff class="btn btn-success stretched-link">Learn More</a>
+      <a href="https://github.com/NirmaniWarakaulla" color = #fff class="btn btn-success stretched-link">Learn More</a>
       </p>
     </div>
   </div>
