--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Khushboo Goel's Portfolio</title>
+		<title>Nirmani Warakaulla's Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="" />
@@ -31,8 +31,8 @@
 									<li><a href="https://twitter.com/khushboogoel01" target="_blank" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="https://www.youtube.com/c/KhushbooGoel" target="_blank" class="icon brands fa-youtube"><span class="label">Youtube</span></a></li>
 									<li><a href="https://www.instagram.com/_khushboo.goel/" target="_blank" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="https://www.linkedin.com/in/khushboogoel01/" target="_blank" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-									<li><a href="https://github.com/KhushbooGoel01" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="www.linkedin.com/in/nirmani-warakaulla" target="_blank" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+									<li><a href="https://github.com/NirmaniWarakaulla" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 									<li><a href="http://t.me/khushboogoel" target="_blank" class="icon brands fa-telegram"><span class="label">Telegram</span></a></li>
 								</ul>
 							</center>
@@ -55,7 +55,7 @@
 							<h2 style="font-size: 30px"> About me :)</h2>
 						</header>
 						<div class="content">
-							<p><strong>I'm Khushboo</strong> , a Sophmore pursuing Bachelors in Computer science and engineering. I am an enthusiastic and social person who loves to take up new challenges and learn new skills. I love meeting new people, exchanging ideas and spreading knowledge and positivity.I have received Google Women Techmaker Scholarship with 2 lakh rupee cash and 2-year mentorship as one of the 124 girls all over India.
+							<p><strong>I'm Nirmani Warakaulla</strong> , a Sophmore pursuing Honors Degree of Bachelors Science in Information Technology at the University of Moratuwa. I am an enthusiastic and social person who loves to take up new challenges and learn new skills. I love meeting new people, exchanging ideas and spreading knowledge and positivity.
 								
 							<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 						</div>
@@ -157,7 +157,7 @@
 							<h2>Sharing Opportunities with world :)</h2>
 						</header>
 						<div class="content">
-							<p><strong>Khushboo Goel</strong> On this channel, I am sharing my different crazy experiences, Different Opportunities that can kick start your career, self -improvement tips, college-related stuff both fun and placements, tips to improve your coding game, easy explanation of the questions and a lot more useful stuff. :)<br>
+							<p><strong>Nirmani Warakaulla</strong> On this channel, I am sharing my different crazy experiences, Different Opportunities that can kick start your career, self -improvement tips, college-related stuff both fun and placements, tips to improve your coding game, easy explanation of the questions and a lot more useful stuff. :)<br>
 
 								Be a part of this journey!!
 								Together we rise✨✨</p>
@@ -217,7 +217,7 @@
 								<h2>Get in touch :)</h2>
 								<li>
 									<h3>Email</h3>
-									<a href="mailto:talktokhushboogoel@gmail.com ">talktokhushboogoel@gmail.com</a>
+									<a href="mailto:nirmaniwarakaulla@gmail.com ">nirmaniwarakaulla@gmail.com</a>
 								</li>
 								
 								<li>
@@ -226,8 +226,8 @@
 										<li><a href="https://twitter.com/khushboogoel01" target="_blank" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="https://www.youtube.com/c/KhushbooGoel" target="_blank" class="icon brands fa-youtube"><span class="label">Youtube</span></a></li>
 										<li><a href="https://www.instagram.com/_khushboo.goel/" target="_blank" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="https://www.linkedin.com/in/khushboogoel01/"  target="_blank" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-										<li><a href="https://github.com/KhushbooGoel01" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+										<li><a href="www.linkedin.com/in/nirmani-warakaulla"  target="_blank" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+										<li><a href="https://github.com/NirmaniWarakaulla" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 										<li><a href="http://t.me/khushboogoel" target="_blank" class="icon brands fa-telegram"><span class="label">Telegram</span></a></li>
 									</ul>
 								</li>
@@ -236,7 +236,7 @@
 					</section>
 
 				<!-- Copyright -->
-				<div class="copyright">&copy; Designed with ❤ by <a href="https://github.com/KhushbooGoel01" target="_blank" >Khushboo Goel</a>.</div>
+				<div class="copyright">&copy; Designed with ❤ by <a href="https://github.com/NirmaniWarakaulla" target="_blank" >Nirmani Warakaulla</a>.</div>
 
 			</div>
 
