--- a/projects.html
+++ b/projects.html
@@ -53,7 +53,7 @@
    <div class="pro">
   <div class="card-deck">
   <div class="card shadow p-3 mb-5 bg-white rounded">
-    <img class="card-img-top" src="https://github.com/NirmaniWarakaulla/NirmaniWarakaulla.github.io/blob/main/Screenshot%201.png" alt="Card image cap">
+    <img class="card-img-top" src="https://github.com/NirmaniWarakaulla/NirmaniWarakaulla.github.io/blob/master/Screenshot%201.png" alt="Card image cap">
 <!--     <img class="card-img-top" src="https://raw.githubusercontent.com/KhushbooGoel01/KhushbooGoel01.github.io/master/Screenshot%202020-11-03%20123625.png" alt="Card image cap"> -->
     <div class="card-body">
       <h5 class="card-title">Portfolio Website</h5>
