--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					<section class="intro">
 						<header>
 							<!-- <center> -->
-							<h1 align="center">Khushboo Goel</h1>
+							<h1 align="center">Nirmani Warakaulla</h1>
 							<div class="aayushi">
 							<p>I am a <span class="typed-text"></span><span class="cursor">&nbsp;</span></p>
 							</div>
