--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <!-- 									<li><a href="https://twitter.com/khushboogoel01" target="_blank" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li> -->
 <!-- 									<li><a href="https://www.youtube.com/c/KhushbooGoel" target="_blank" class="icon brands fa-youtube"><span class="label">Youtube</span></a></li> -->
 <!-- 									<li><a href="https://www.instagram.com/_khushboo.goel/" target="_blank" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> -->
-									<li><a href="www.linkedin.com/in/nirmani-warakaulla" target="_blank" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+									<li><a href="https://www.linkedin.com/in/nirmani-warakaulla/" target="_blank" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 									<li><a href="https://github.com/NirmaniWarakaulla" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 <!-- 									<li><a href="http://t.me/khushboogoel" target="_blank" class="icon brands fa-telegram"><span class="label">Telegram</span></a></li> -->
 								</ul>
@@ -226,7 +226,7 @@
 										<li><a href="https://twitter.com/khushboogoel01" target="_blank" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="https://www.youtube.com/c/KhushbooGoel" target="_blank" class="icon brands fa-youtube"><span class="label">Youtube</span></a></li>
 										<li><a href="https://www.instagram.com/_khushboo.goel/" target="_blank" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="www.linkedin.com/in/nirmani-warakaulla"  target="_blank" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+										<li><a href="https://www.linkedin.com/in/nirmani-warakaulla/" target="_blank" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 										<li><a href="https://github.com/NirmaniWarakaulla" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 										<li><a href="http://t.me/khushboogoel" target="_blank" class="icon brands fa-telegram"><span class="label">Telegram</span></a></li>
 									</ul>
