--- a/index.html
+++ b/index.html
@@ -162,22 +162,22 @@
 								Be a part of this journey!!
 								Together we rise✨✨</p>
 							<div class ="iframe-container">
-							<iframe width="560" height="315" src="https://www.youtube.com/embed/yhGu9lxfs-g" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+							<iframe width="560" height="315" src="https://medium.com/geekculture/what-is-ux-xd-uxd-ued-ui-cx-ixd-uxe-ia-sd-and-whats-the-difference-eb425bb789e4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 							</div>
 							<br>
 
 							<div class ="iframe-container">
-							<iframe width="560" height="315" src="https://www.youtube.com/embed/ROzwmfEaaHw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+							<iframe width="560" height="315" src="https://medium.com/nerd-for-tech/swap-function-1793f4acf10e" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 							</div>
 							<br>
 
 							<div class ="iframe-container">
-							<iframe width="560" height="315" src="https://www.youtube.com/embed/Ca5g5zDy9mE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+							<iframe width="560" height="315" src="https://nirmaniwarakaulla.medium.com/the-datapath-ac28c6741be7" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 							</div>
 							<br>
 
 							<div class ="iframe-container">
-							<iframe width="560" height="315" src="https://www.youtube.com/embed/F18Phogwxd8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+							<iframe width="560" height="315" src="https://nirmaniwarakaulla.medium.com/the-four-stages-of-compiling-a-c-program-69e4da8e2911" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 							</div>
 							<br>
 							<div class ="iframe-container">
@@ -185,7 +185,7 @@
 							</div>
 							<br>
 							<ul class="actions">
-								<li><a href="https://www.youtube.com/c/KhushbooGoel" target="_blank" class="button primary large">Checkout more</a></li>
+								<li><a href="https://nirmaniwarakaulla.medium.com/" target="_blank" class="button primary large">Checkout more</a></li>
 								<li><a href="https://www.instagram.com/_khushboo.goel/" target="_blank" class="button large">Checkout IG</a></li>
 							</ul>
 						</div>
@@ -223,12 +223,12 @@
 								<li>
 									<h3>WOW Still here ?!<br> Let's Connect</h3>
 									<ul class="icons">
-										<li><a href="https://twitter.com/khushboogoel01" target="_blank" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="https://www.youtube.com/c/KhushbooGoel" target="_blank" class="icon brands fa-youtube"><span class="label">Youtube</span></a></li>
-										<li><a href="https://www.instagram.com/_khushboo.goel/" target="_blank" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+<!-- 										<li><a href="https://twitter.com/khushboogoel01" target="_blank" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li> -->
+<!-- 										<li><a href="https://www.youtube.com/c/KhushbooGoel" target="_blank" class="icon brands fa-youtube"><span class="label">Youtube</span></a></li> -->
+<!-- 										<li><a href="https://www.instagram.com/_khushboo.goel/" target="_blank" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> -->
 										<li><a href="https://www.linkedin.com/in/nirmani-warakaulla/" target="_blank" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 										<li><a href="https://github.com/NirmaniWarakaulla" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-										<li><a href="http://t.me/khushboogoel" target="_blank" class="icon brands fa-telegram"><span class="label">Telegram</span></a></li>
+<!-- 										<li><a href="http://t.me/khushboogoel" target="_blank" class="icon brands fa-telegram"><span class="label">Telegram</span></a></li> -->
 									</ul>
 								</li>
 							</ul>
