--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 							<br>
 
 							<div class ="iframe-container">
-							<iframe width="560" height="315" src="https://nirmaniwarakaulla.medium.com/the-four-stages-of-compiling-a-c-program-69e4da8e2911" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+							<iframe width="560" height="315" src="https://nirmaniwarakaulla.medium.com/the-four-stages-of-compiling-a-c-program-69e4da8e2911" frameborder="0"></iframe>
 							</div>
 							<br>
 							<div class ="iframe-container">
