--- a/index.html
+++ b/index.html
@@ -177,7 +177,8 @@
 							<br>
 
 							<div class ="iframe-container">
-							"<iframe width="560" height="315" src="https://nirmaniwarakaulla.medium.com/the-four-stages-of-compiling-a-c-program-69e4da8e2911" frameborder="0"></iframe>"
+							<iframe width="560" height="315" src="https://nirmaniwarakaulla.medium.com/the-four-stages-of-compiling-a-c-program-69e4da8e2911" frameborder="0" scrolling=yes allowfullscreen></iframe>
+<!-- 								<iframe src="http://yourblog.blogspot.com" frameborder="0" width=930 height=500 scrolling=yes allowfullscreen></iframe> -->
 							</div>
 							<br>
 							<div class ="iframe-container">
