--- a/index.html
+++ b/index.html
@@ -176,15 +176,15 @@
 							</div>
 							<br>
 							
-							<div id="medium-widget"></div>
+<!-- 							<div id="medium-widget"></div>
                                                         <script src="https://medium-widget.pixelpoint.io/widget.js"></script>
-                                                        <script>MediumWidget.Init({renderTo: '#medium-widget', params: {"resource":"https://medium.com/geekculture/what-is-ux-xd-uxd-ued-ui-cx-ixd-uxe-ia-sd-and-whats-the-difference-eb425bb789e4","postsPerLine":2,"limit":4,"picture":"big","fields":["description","author","claps","publishAt"],"ratio":"landscape"}})</script>
+                                                        <script>MediumWidget.Init({renderTo: '#medium-widget', params: {"resource":"https://medium.com/geekculture/what-is-ux-xd-uxd-ued-ui-cx-ixd-uxe-ia-sd-and-whats-the-difference-eb425bb789e4","postsPerLine":2,"limit":4,"picture":"big","fields":["description","author","claps","publishAt"],"ratio":"landscape"}})</script> -->
 
 
-<!-- 							<div class ="iframe-container"> -->
-<!-- 							<iframe width="560" height="315" src="https://nirmaniwarakaulla.medium.com/the-four-stages-of-compiling-a-c-program-69e4da8e2911" frameborder="0" scrolling=yes allowfullscreen></iframe> -->
+							<div class ="iframe-container">
+							<iframe width="560" height="315" src="https://nirmaniwarakaulla.medium.com/the-datapath-ac28c6741be7" frameborder="0" scrolling=yes allowfullscreen></iframe>
 <!-- 								<iframe src="http://yourblog.blogspot.com" frameborder="0" width=930 height=500 scrolling=yes allowfullscreen></iframe> -->
-<!-- 							</div> -->
+							</div>
 							<br>
 							<div class ="iframe-container">
 							<iframe width="560" height="315" src="https://www.youtube.com/embed/gPaguw0FHjU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
