--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
 
 							<div class ="iframe-container">
-							<iframe width="560" height="315" src="https://nirmaniwarakaulla.medium.com/the-datapath-ac28c6741be7" frameborder="0" scrolling=yes allowfullscreen></iframe>
+							<iframe width="560" height="315" src="https://nirmaniwarakaulla.medium.com/" frameborder="0" scrolling=yes allowfullscreen></iframe>
 <!-- 								<iframe src="http://yourblog.blogspot.com" frameborder="0" width=930 height=500 scrolling=yes allowfullscreen></iframe> -->
 							</div>
 							<br>
