--- a/index.html
+++ b/index.html
@@ -167,12 +167,12 @@
 							<br>
 
 							<div class ="iframe-container">
-							<iframe width="560" height="315" src="https://www.youtube.com/watch?v=p7nqYfSnEo8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+							<iframe width="560" height="315" src="https://www.youtube.com/embed/watch?v=p7nqYfSnEo8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 							</div>
 							<br>
 
 							<div class ="iframe-container">
-							<iframe width="560" height="315" src="https://www.youtube.com/embed/AxkNPROeOybppymT" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+							<iframe width="560" height="315" src="https://nirmaniwarakaulla.medium.com/embed/the-datapath-ac28c6741be7" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 							</div>
 							<br>
 							
